--- a/CSS/header_footer_styles.css
+++ b/CSS/header_footer_styles.css
@@ -32,7 +32,7 @@ html {
 /*--------------------Header Logo and Link about me--------------*/
 .container-aboutblog {
     height: 90px;
-    padding: 0 40px 0 40px;
+    padding: 0 40px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
