--- a/CSS/home_styles.css
+++ b/CSS/home_styles.css
@@ -30,7 +30,16 @@ body {
     border: 1px solid #FFFFFF;
     font-size: 1.8rem;
     font-weight: 700;
+    text-decoration: none;
+    color: #000000;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
+.container-cover__button:hover {
+    background-color: aliceblue;
+}
+
 .container-imgcover {
     width: 100%;
     height: 100%;
